src/test/ui/consts/recursive-zst-static.unleash.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/recursive-zst-static.rs:10:1
   |
LL | static FOO: () = FOO;
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires const-evaluating + checking `FOO` again
   = note: cycle used when running analysis passes on this crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
